--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/scholarship_db
+spring.datasource.url=jdbc:mysql://localhost:3306/scholarship_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=mysql
+spring.datasource.password=1234
 
 spring.jpa.hibernate.ddl-auto=none
 spring.sql.init.mode=always
@@ -9,4 +9,8 @@ spring.sql.init.mode=always
 spring.security.user.name=modernsBugs
 spring.security.user.password=modernsBugs
 
-spring.flyway.locations=classpath:migration
+# Configurações do Flyway
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.schemas=scholarship_db
